Update character controller to use kinematic physics
The commit updates the character controller to use kinematic physics
instead of dynamic rigid bodies. This provides more precise control over
character movement and collision response.

Key changes: - Switch to kinematic rigid body with manual collision
handling - Remove first-person camera and mouse look functionality - Add
basic collision response system for kinematic bodies - Simplify movement
code and remove unnecessary components - Update example to demonstrate
kinematic character control

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,17 @@ name = "bevy_movement"
 version = "0.1.0"
 edition = "2021"
 authors = ["Your Name <your.email@example.com>"]
-description = "A character controller crate for Bevy using Avian3D physics"
+description = "A kinematic character controller crate for Bevy using Avian3D physics"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/yourusername/bevy_movement"
-keywords = ["bevy", "physics", "character", "controller", "avian3d"]
+keywords = [
+    "bevy",
+    "physics",
+    "character",
+    "controller",
+    "avian3d",
+    "kinematic",
+]
 categories = ["game-development", "game-engines"]
 
 [dependencies]
